--- a/layouts/404.html
+++ b/layouts/404.html
@@ -1,3 +1,7 @@
-{{ partial "head.html" . }}
-{{ partial "error-404.html" . }}
+<div id="wrap">
+	<div id="main">
+        {{ partial "head.html" . }}
+        {{ partial "error-404.html" . }}
+    </div>
+</div>
 {{ partial "foot.html" . }}
