--- a/layouts/partials/base/header.html
+++ b/layouts/partials/base/header.html
@@ -1,5 +1,5 @@
 <header id="main-header">
-  <nav class="navbar navbar-default navbar-fixed-top">
+  <nav class="navbar navbar-default">
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
