--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -1,46 +1,50 @@
 {{ partial "head.html" . }}
-{{ .Scratch.Set "url" (cond (isset .Site.Params "heroimage") .Site.Params.heroImage "") }}
-{{ .Scratch.Set "url" (cond (isset .Params "heroimage") .Params.heroImage (.Scratch.Get "url") ) }}
-{{ if (ne (.Scratch.Get "url") "") }}
-<style>
- .hero {
-     background-image: url({{.Scratch.Get "url"}});
-     background-position: center;
-     background-repeat: no-repeat;
-     background-size:  cover;
-     height: 400px;
- }
- .title-metas, .hat {
-     position: absolute;
-     right: 0px;
-     left:0px;
-     bottom: -400px;
-     background:linear-gradient(to bottom, rgba(255, 255, 255, 0.6), rgb(255, 255, 255));
- }
- body > .container {
-     padding-top: 15px;
- }
+<div id="wrap">
+	<div id="main">
+        {{ .Scratch.Set "url" (cond (isset .Site.Params "heroimage") .Site.Params.heroImage "") }}
+        {{ .Scratch.Set "url" (cond (isset .Params "heroimage") .Params.heroImage (.Scratch.Get "url") ) }}
+        {{ if (ne (.Scratch.Get "url") "") }}
+        <style>
+        .hero {
+            background-image: url({{.Scratch.Get "url"}});
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size:  cover;
+            height: 400px;
+        }
+        .title-metas, .hat {
+            position: absolute;
+            right: 0px;
+            left:0px;
+            bottom: -400px;
+            background:linear-gradient(to bottom, rgba(255, 255, 255, 0.6), rgb(255, 255, 255));
+        }
+        body > .container {
+            padding-top: 15px;
+        }
 
-</style>
-<div class="hero">
-    <div class="container">
-        <div class="row">
-            {{ .Render "single.hat" }}
+        </style>
+        <div class="hero">
+            <div class="container">
+                <div class="row">
+                    {{ .Render "single.hat" }}
+                </div>
+            </div>
         </div>
-    </div>
-</div>
-{{ end }}
-<div class="container">
-    <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-{{ if .Site.Params.showRightSidebar }}9{{ else }}12{{ end }} col-lg-{{ if .Site.Params.showRightSidebar }}9{{ else }}12{{ end }}">
-            {{ if (eq (.Scratch.Get "url") "") }}
-            {{ .Render "single.hat" }}
-            {{ end }}
-            {{ .Render "single.content" }}
-            {{ .Render "single.boot" }}
-        </div>
-        <div class="col-xs-12 col-sm-12 col-md-{{ if .Site.Params.showRightSidebar }}3{{ else }}12{{ end }} col-lg-{{ if .Site.Params.showRightSidebar }}3{{ else }}12{{ end }}">
-            {{ partial "bloc/content/sidebar.html" .}}
+        {{ end }}
+        <div class="container">
+            <div class="row">
+                <div class="col-xs-12 col-sm-12 col-md-{{ if .Site.Params.showRightSidebar }}9{{ else }}12{{ end }} col-lg-{{ if .Site.Params.showRightSidebar }}9{{ else }}12{{ end }}">
+                    {{ if (eq (.Scratch.Get "url") "") }}
+                    {{ .Render "single.hat" }}
+                    {{ end }}
+                    {{ .Render "single.content" }}
+                    {{ .Render "single.boot" }}
+                </div>
+                <div class="col-xs-12 col-sm-12 col-md-{{ if .Site.Params.showRightSidebar }}3{{ else }}12{{ end }} col-lg-{{ if .Site.Params.showRightSidebar }}3{{ else }}12{{ end }}">
+                    {{ partial "bloc/content/sidebar.html" .}}
+                </div>
+            </div>
         </div>
     </div>
 </div>
