--- a/layouts/partials/base/footer.html
+++ b/layouts/partials/base/footer.html
@@ -2,9 +2,9 @@
 <footer class="footer hidden-print">
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+            <!-- <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                 {{ partial "modules/breadcrumb-dark.html" . }}
-            </div>
+            </div> -->
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                 {{ partial "bloc/footer/nav.html" . }}
             </div>
