--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -218,6 +218,7 @@ pre {
 }
 
 pre code {
+    font-weight: bold;
     font-size: calc(12px + (15 - 12) * ((100vw - 300px) / (1600 - 300)));
     line-height: calc(1.2em + (1.3 - 1.1) * ((100vw - 300px)/(1600 - 300)));
 }
